@@ -1,6 +1,7 @@
 1.9.0
 ---
 * Added Basque (EU) localization
+* Added Slovenian (SL) localization
 * Fixed issue #127 - Finnish translations has one : instead of ;
 * Added in support for HTML 5 input types, fixes #97
 
